--- a/main_page.css
+++ b/main_page.css
@@ -5,3 +5,12 @@ html {
    -o-background-size: cover;
    background-size: cover;
  }
+
+ body {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-top: 50px;
+    font-family: 'Nunito', sans-serif;
+    font-size: large;
+ }
