--- a/main_page.css
+++ b/main_page.css
@@ -7,10 +7,13 @@ body {
 }
 
 body {
-    display: flex;
     flex-direction: row;
     justify-content: center;
     padding-top: 50px;
     font-family: 'Nunito', sans-serif;
     font-size: large;
+}
+
+h1 {
+    display: flex;
 }
