--- a/main_page.css
+++ b/main_page.css
@@ -167,6 +167,7 @@ h1 {
     }
 }
 
+/* To add a fading image - Github bug
 .student_image {
     transform: rotate(180deg);
     display: block;
@@ -176,4 +177,5 @@ h1 {
     border-radius: 20%;
     padding: 50px;
     opacity: 0.0;  
+*/
 }
