--- a/cal.css
+++ b/cal.css
@@ -231,6 +231,10 @@ td>span {
     background-color: #8763c9;
 }
 
+.stage-pink {
+    background-color: #c07ac9;
+}
+
 .cols {
     text-align: center;
     color: #333;
